# ftd

./: .gitignore  Cargo.toml  GEMINI.md  README.md  REQUIREMENTS.md  test_delete.js  test_vscode_range.js
.agents/skills/bidi-sync/: SKILL.md
.agents/skills/fd-format/: SKILL.md
.agents/skills/ftd-format/: SKILL.md
.agents/skills/rust-wasm/: SKILL.md
.agents/skills/vscode-extension/: SKILL.md
.agents/workflows/: advise.md  build.md  commit.md  debug.md  design.md  e2e-ux.md  e2e.md  learn.md  merge.md  nonstop.md  pr.md  prompts.md  publish.md  qa.md  smoke.md  spec.md  suggest.md  test.md  uiux.md  yolo.md
.devcontainer/: devcontainer.json
.githooks/: pre-push
.github/workflows/: ci.yml  pages.yml  publish.yml  release.yml
.jules/: bolt.md  sentinel.md
crates/fd-core/: Cargo.toml
crates/fd-core/examples/: migrate_labels.rs
crates/fd-core/src/: emitter.rs  format.rs  id.rs  layout.rs  lib.rs  lint.rs  model.rs  parser.rs  resolve.rs  transform.rs
crates/fd-core/tests/: layout_resolution.rs  parse_emit_roundtrip.rs  perf_benchmark.rs
crates/fd-core/tests/fixtures/: login_form.fd  nested_layout.fd
crates/fd-editor/: Cargo.toml
crates/fd-editor/src/: commands.rs  input.rs  lib.rs  shortcuts.rs  sync.rs  tools.rs
crates/fd-editor/tests/: bidi_sync.rs  undo_redo.rs
crates/fd-editor/tests/fixtures/: minimal.fd  nested_layout.fd
crates/fd-lsp/: Cargo.toml
crates/fd-lsp/src/: completion.rs  diagnostics.rs  hover.rs  main.rs  symbols.rs
crates/fd-render/: Cargo.toml
crates/fd-render/src/: hit.rs  paint.rs
crates/fd-wasm/: Cargo.toml
crates/fd-wasm/src/: lib.rs  render2d.rs  svg.rs
crates/ftd-core/: Cargo.toml
crates/ftd-core/src/: emitter.rs  id.rs  layout.rs  lib.rs  model.rs  parser.rs
crates/ftd-editor/: Cargo.toml
crates/ftd-editor/src/: commands.rs  input.rs  lib.rs  sync.rs  tools.rs
crates/ftd-render/: Cargo.toml
crates/ftd-render/src/: canvas.rs  hit.rs  lib.rs  paint.rs
crates/ftd-wasm/: Cargo.toml
crates/ftd-wasm/src/: lib.rs  render2d.rs
docs/: ARCHITECTURE.md  CHANGELOG.md  LESSONS.md  LIBRARIES.md  REQUIREMENTS.md  SHORTCUTS.md
docs/design/: 01_format_overview.fd  02_bidi_sync.fd  03_canvas_tools.fd  04_architecture.fd  05_edge_system.fd  userflow_onboarding.fd
docs/specs/: animation-system.md  drawing-tools.md  edge-system.md  floating-toolbar.md  inline-editing.md  selection.md
editors/zed/: Cargo.toml  extension.toml
editors/zed/languages/fd/: config.toml
editors/zed/src/: lib.rs
examples/: animated_onboarding.fd  animations.fd  checkout_flow.fd  constraints.fd  dark_theme.fd  dashboard.fd  demo.fd  demo.ftd  design_system.fd  design_tokens.fd  grid_gallery.fd  landing_page.fd  mobile_app.fd  onboarding.fd  pricing_page.fd  responsive_dashboard.fd  userflow_onboarding.fd  welcome.fd  wireframe_login.fd
examples/benchmarks/: CHEATSHEET.md  README.md  api_flowchart.excalidraw.json  api_flowchart.fd  compare.sh  dashboard_card.excalidraw.json  dashboard_card.fd  data_dashboard.excalidraw.json  data_dashboard.fd  design_system.excalidraw.json  design_system.fd  kanban_board.excalidraw.json  kanban_board.fd  login_form.excalidraw.json  login_form.fd  mobile_onboarding.excalidraw.json  mobile_onboarding.fd  network_topology.excalidraw.json  network_topology.fd  org_chart.excalidraw.json  org_chart.fd  pricing_table.excalidraw.json  pricing_table.fd  wireframe_ecommerce.excalidraw.json  wireframe_ecommerce.fd
fd-vscode/: CHANGELOG.md  README.md  package-lock.json  package.json  pnpm-lock.yaml
fd-vscode/src/: ai-refine.ts  ai-renamify.ts  diagnostics.ts  document-symbol.ts  e2e-ux.test.ts  extension.ts  fd-parse.test.ts  fd-parse.ts  webview-html.ts
fd-vscode/src/panels/: readonly-provider.ts  spec-view.ts  tree-preview.ts
fd-vscode/webview/: main.js
fd-vscode/webview/wasm/: .gitignore  fd_wasm.d.ts  fd_wasm.js  fd_wasm_bg.wasm  fd_wasm_bg.wasm.d.ts  package.json
ftd-extension/: .gitignore  LICENSE  README.md  package-lock.json  package.json
ftd-extension/syntaxes/: ftd.tmLanguage.json
ftd-vscode/: .vscodeignore  CHANGELOG.md  README.md  language-configuration.json  package-lock.json  package.json  tsconfig.json
ftd-vscode/src/: extension.ts
ftd-vscode/syntaxes/: ftd.tmLanguage.json
ftd-vscode/webview/: main.js
libraries/: flowchart.fd  ui-kit.fd  wireframe.fd
site/: index.html  playground.js  style.css
tree-sitter-fd/: grammar.js  package.json  tree-sitter.json
tree-sitter-fd/queries/: highlights.scm
tree-sitter-fd/src/: grammar.json  node-types.json  parser.c
