[workspace]
resolver = "2"
members = [
    "crates/fd-core",
    "crates/fd-render",
    "crates/fd-editor",
    "crates/fd-wasm",
    "crates/fd-lsp",
]
exclude = [
    "editors/zed",
]

[workspace.package]
version = "0.1.6"
edition = "2024"
license = "MIT"
authors = ["Khang Nghiêm"]
repository = "https://github.com/khangnghiem/fast-draft"
homepage = "https://github.com/khangnghiem/fast-draft"
keywords = ["design", "canvas", "scene-graph", "lsp"]
categories = ["graphics", "parser-implementations"]

[workspace.dependencies]
# Core
petgraph = "0.7"
lasso = "0.7"
smallvec = { version = "1.13", features = ["serde"] }

# Serialization
rmp-serde = "1.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Parsing
winnow = "0.7"

# Rendering
vello = "0.4"
wgpu = "24"
peniko = "0.3"
kurbo = "0.11"

# WASM
wasm-bindgen = "0.2"
web-sys = "0.3"
js-sys = "0.3"

# Logging
log = "0.4"
env_logger = "0.11"

# LSP
tower-lsp = "0.20"
tokio = { version = "1", features = ["full"] }
ropey = "1.6"

# Testing
pretty_assertions = "1.4"
