[package]
name = "fd-editor"
description = "FD (Fast Draft) — bidirectional editor engine, tools, and undo/redo"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
fd-core = { path = "../fd-core" }
fd-render = { path = "../fd-render" }
petgraph = { workspace = true }
smallvec = { workspace = true }
log = { workspace = true }

[dev-dependencies]
pretty_assertions = { workspace = true }
