[package]
name = "fd-lsp"
description = "FD (Fast Draft) Language Server — diagnostics, completions, hover, symbols"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true

[[bin]]
name = "fd-lsp"
path = "src/main.rs"

[dependencies]
fd-core = { path = "../fd-core", version = "0.1.0" }
tower-lsp = { workspace = true }
tokio = { workspace = true }
serde_json = { workspace = true }
log = { workspace = true }
ropey = { workspace = true }
