[package]
name = "ftd-editor"
description = "FTD (Fast Draft) — bidirectional editor engine, tools, and undo/redo"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
ftd-core = { path = "../ftd-core" }
ftd-render = { path = "../ftd-render" }
smallvec = { workspace = true }
log = { workspace = true }

[dev-dependencies]
pretty_assertions = { workspace = true }
