[package]
name = "ftd-render"
description = "FTD (Fast Draft) — Vello/wgpu 2D renderer with hit testing"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
ftd-core = { path = "../ftd-core" }
vello = { workspace = true }
wgpu = { workspace = true }
peniko = { workspace = true }
log = { workspace = true }

[dev-dependencies]
pretty_assertions = { workspace = true }
