[package]
name = "ftd-wasm"
description = "FTD (Fast Draft) — WASM bridge for VS Code extension"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
ftd-core = { path = "../ftd-core" }
ftd-editor = { path = "../ftd-editor" }
ftd-render = { path = "../ftd-render" }
wasm-bindgen = { workspace = true }
serde_json = { workspace = true }
serde = { workspace = true }
web-sys = { workspace = true, features = [
    "CanvasRenderingContext2d",
    "HtmlCanvasElement",
    "console",
] }
js-sys = { workspace = true }
log = { workspace = true }

[dev-dependencies]
pretty_assertions = { workspace = true }
